add security enhancements: update SecurityConfig for better header handling and authentication provider configuration; improve RateLimitFilter with non-null annotations; fix UserServiceTest to use getFirst() for result assertion